--- a/assets/sass/custom.css
+++ b/assets/sass/custom.css
@@ -1,3 +1,7 @@
+html {
+  font-size: 100%;
+}
+
 p {
   font-weight: 400;
 }
@@ -11,6 +15,25 @@ nav.fondo-rojo {
 
 nav.fondo-rojo ul li a.nav-link {
   color: white;
+}
+
+nav.fondo-rojo form.form-nav > button.search {
+  background-color: white;
+  color: black;
+}
+
+nav.fondo-rojo form.form-nav > button.search:hover {
+  background-color: #ffc107;
+}
+
+nav.fondo-blanco form.form-nav > button.search {
+  background-color: #FF3C00;
+  color: white;
+}
+
+nav.fondo-blanco form.form-nav > button.search:hover {
+  background-color: #ffc107;
+  color: black;
 }
 
 nav.fondo-blanco {
@@ -121,15 +144,15 @@ figure.figure-contenedor img {
 }
 
 .h2-rojo {
-  margin-bottom: 5px;
-  font-size: 16px;
+  margin-bottom: 0.3125em;
+  font-size: 1rem;
   color: #FF3C00;
 }
 
 div.section2 {
-  margin-top: 80px;
-  padding-right: 15px;
-  padding-left: 15px;
+  margin-top: 5em;
+  padding-right: 0.9375em;
+  padding-left: 0.9375em;
 }
 
 span.span-rojo {
@@ -138,18 +161,18 @@ span.span-rojo {
 
 p.p {
   color: #616161;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.5;
 }
 
 p.p-margin-top {
-  margin-top: 20px;
+  margin-top: 1.25em;
 }
 
 div.contenedor-caracteristicas {
-  padding-top: 25px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-top: 1.5625em;
+  padding-left: 0.9375em;
+  padding-right: 0.9375em;
 }
 
 div.caracteristica1,
@@ -159,58 +182,58 @@ div.caracteristica2 {
 
 h2.h2-caract {
   color: #232323;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: 0.9375em;
 }
 
 p.p-caract,
 figure.carrusel figcaption p {
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 
 div.caracteristica1-icono1 {
-  font-size: 45px;
-  margin-right: 25px;
+  font-size: 2.8125rem;
+  margin-right: 1.5625em;
   color: #FF3C00;
 }
 
 div.caracteristica2-icono2 {
   color: #FF3C00;
-  margin-right: 40px;
-  font-size: 45px;
+  margin-right: 2.5em;
+  font-size: 2.8125rem;
 }
 
 .section3 {
   background-color: #F4F7FC;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 39px;
-  margin-top: 40px;
-  padding-bottom: 40px;
+  padding-left: 0.9375em;
+  padding-right: 0.9375em;
+  padding-top: 2.4375em;
+  margin-top: 2.5em;
+  padding-bottom: 2.5em;
 }
 
 header.header-article-section3 {
-  margin-bottom: 30px;
+  margin-bottom: 1.875em;
 }
 
 article.article-section3 {
-  margin-bottom: 35px;
+  margin-bottom: 2.1875em;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
 
 div.contenedor-slider {
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 15px;
+  padding-left: 0.9375em;
+  padding-right: 0.9375em;
+  padding-top: 0.9375em;
   background-color: white;
-  border-radius: 6px;
+  border-radius: 0.375rem;
 }
 
 figure.carrusel figcaption h2 {
-  margin: 20px 0px;
+  margin: 1.25em 0px;
 }
 
 figure.carrusel img {
@@ -218,7 +241,7 @@ figure.carrusel img {
 }
 
 figure.carrusel figcaption {
-  padding: 20px 20px 0px 20px;
+  padding: 1.25em 1.25em 0px 1.25em;
 }
 
 figure.carrusel figcaption div {
@@ -233,9 +256,9 @@ figure.carrusel figcaption div {
 
 .relative a {
   display: block;
-  padding: 16px 20px;
+  padding: 1em 1.25em;
   color: #202020;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
   text-decoration: none;
 }
@@ -248,7 +271,7 @@ figure.carrusel figcaption div {
   width: 100px;
   right: -15px;
   top: 0;
-  padding: 0 0 54px 0;
+  padding: 0 0 3.375em 0;
   transform: skew(-29deg);
   transition: 0.3s;
 }
@@ -274,9 +297,9 @@ figure.carrusel figcaption div {
 
 figure.carrusel figcaption a {
   display: block;
-  padding: 16px 20px;
+  padding: 1em 1.25em;
   color: #202020;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 500;
   text-decoration: none;
 }
@@ -289,7 +312,7 @@ figure.carrusel figcaption a::before {
   width: 100px;
   right: -15px;
   top: 0;
-  padding: 0 0 54px 0;
+  padding: 0 0 3.375em 0;
   transform: skew(-29deg);
   transition: 0.3s;
 }
@@ -319,10 +342,10 @@ figure.carrusel figcaption div:hover a::before {
 
 div.contenedor-sec4 {
   background-image: url("../img/ch-bg.webp");
-  padding-top: 46px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 70px;
+  padding-top: 2.875em;
+  padding-left: 0.9375em;
+  padding-right: 0.9375em;
+  padding-bottom: 4.375em;
   background-position: bottom;
 }
 
@@ -335,18 +358,18 @@ div.contenedor-sec4 {
 }
 
 .icono {
-  font-size: 45px;
+  font-size: 2.8125rem;
   color: #f12a02;
 }
 
 .p-font {
   color: #616161;
-  font-size: 17px;
-  margin-bottom: 50px;
+  font-size: 1.0625rem;
+  margin-bottom: 3.125em;
 }
 
 .profesional-team {
-  padding-top: 75px;
+  padding-top: 4.6875em;
 }
 
 figure.profesional1 {
@@ -357,7 +380,7 @@ figure.profesional1 {
 
 .profesional1-caption {
   background: #fff;
-  padding: 20px 0;
+  padding: 1.25em 0;
   width: 80%;
   margin: auto;
   border-radius: 5px;
@@ -374,7 +397,7 @@ figure.profesional1 {
   top: 40%;
   right: 0px;
   list-style: none;
-  padding: 15px;
+  padding: 0.9375em;
   background-color: white;
   transition: 0.3s;
   opacity: 0;
@@ -400,7 +423,7 @@ figure.profesional1 {
 
 button.btn-form-sec5 {
   background: #FF3C00;
-  padding: 14px 39px;
+  padding: 0.875em 2.4375em;
   color: #fff;
 }
 
@@ -410,16 +433,16 @@ button.btn-form-sec5:hover {
 }
 
 .section7 {
-  margin-bottom: 30px;
+  margin-bottom: 1.875em;
 }
 
 .section8 {
   background: linear-gradient(360deg, rgba(255, 60, 0, 0.87), rgba(241, 141, 1, 0.87)), #f4f7fc url("../img/pd-sh.webp") center center/cover no-repeat scroll;
-  padding: 60px 0px 60px 0px;
+  padding: 3.75em 0px 3.75em 0px;
 }
 
 .section9, footer {
-  padding: 60px 0px 60px 0px;
+  padding: 3.75em 0px 3.75em 0px;
 }
 
 @media screen and (max-width: 2600px) {
@@ -459,7 +482,7 @@ button.btn-form-sec5:hover {
     display: none;
   }
   .card-title {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
   div.card-body {
     overflow: hidden;
@@ -512,9 +535,9 @@ button.btn-form-sec5:hover {
     right: 0;
   }
   section.section2 {
-    margin-top: 80px;
-    padding-right: 15px;
-    padding-left: 15px;
+    margin-top: 5em;
+    padding-right: 0.9375em;
+    padding-left: 0.9375em;
   }
 }
 @media screen and (max-width: 992px) {
@@ -543,7 +566,7 @@ button.btn-form-sec5:hover {
     display: none;
   }
 }
-@media screen and (max-width: 575.98px) {
+@media screen and (max-width: 760px) {
   .hero {
     display: none;
   }
@@ -551,7 +574,7 @@ button.btn-form-sec5:hover {
     height: 70vh;
   }
   .section2 {
-    margin-top: 50px;
+    margin-top: 3.125em;
   }
   div.row.slider-md {
     display: none;
@@ -566,8 +589,19 @@ button.btn-form-sec5:hover {
     right: 0;
   }
   section.section2 {
-    margin-top: 80px;
-    padding-right: 15px;
-    padding-left: 15px;
+    margin-top: 5em;
+    padding-right: 0.9375em;
+    padding-left: 0.9375em;
   }
+}
+.imagen-sec4 {
+  text-align: center;
+}
+
+.sec4-flex {
+  display: flex;
+}
+
+.form-h3 {
+  font-size: 1rem;
 }/*# sourceMappingURL=custom.css.map */
