--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -3,10 +3,14 @@ $red: #FF3C00;
 //* tamaño de fuente personalizada para la clase navbar-brand
 $font-size-lg: 1.4rem;
 
+//variable predeterminada del boton success(verde) de bootstrap.. boton de formulario nav
+$success: #ffc107;
+
+
 //* para los figures y no tiene nada que ver con cosas del bootstrap
 $ancho_automatico: auto;
 
-$pt_pb: 60px 0px 60px 0px;
+$pt_pb: 3.75em 0px 3.75em 0px;
 
 
 
@@ -14,6 +18,15 @@ $pt_pb: 60px 0px 60px 0px;
         display: flex;
         flex-direction: column;
         justify-content: center;
+    }
+
+
+
+
+
+
+    html{
+        font-size: 100%;
     }
 
     p {
@@ -30,6 +43,25 @@ $pt_pb: 60px 0px 60px 0px;
 
     nav.fondo-rojo ul li a.nav-link{
         color: white;
+    }
+
+    nav.fondo-rojo form.form-nav > button.search{
+        background-color: white;
+        color: black;
+    }
+
+    nav.fondo-rojo form.form-nav > button.search:hover{
+        background-color: $success;
+    }
+
+    nav.fondo-blanco form.form-nav > button.search{
+        background-color: $red;
+        color: white;
+    }
+
+    nav.fondo-blanco form.form-nav > button.search:hover{
+        background-color: $success;
+        color: black;
     }
 
     nav.fondo-blanco {
@@ -142,15 +174,15 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     .h2-rojo {
-        margin-bottom: 5px;
-        font-size: 16px;
+        margin-bottom: .3125em;
+        font-size: 1rem;
         color: $red;
     }
 
     div.section2 {
-        margin-top: 80px;
-        padding-right: 15px;
-        padding-left: 15px;
+        margin-top: 5em;
+        padding-right: .9375em;
+        padding-left: .9375em;
     }
 
     span.span-rojo {
@@ -159,18 +191,18 @@ $pt_pb: 60px 0px 60px 0px;
 
     p.p {
         color: #616161;
-        font-size: 14px;
+        font-size: .875rem;
         line-height: 1.5;
     }
 
     p.p-margin-top {
-        margin-top: 20px;
+        margin-top: 1.25em;
     }
 
     div.contenedor-caracteristicas {
-        padding-top: 25px;
-        padding-left: 15px;
-        padding-right: 15px;
+        padding-top: 1.5625em;
+        padding-left: .9375em;
+        padding-right: .9375em;
     }
 
     div.caracteristica1,
@@ -180,58 +212,58 @@ $pt_pb: 60px 0px 60px 0px;
 
     h2.h2-caract {
         color: #232323;
-        font-size: 18px;
+        font-size: 1.125rem;
         font-weight: 500;
-        margin-bottom: 15px;
+        margin-bottom: .9375em;
     }
 
     p.p-caract,
     figure.carrusel figcaption p {
-        font-size: 12px;
+        font-size: .75rem;
     }
 
     div.caracteristica1-icono1 {
-        font-size: 45px;
-        margin-right: 25px;
+        font-size: 2.8125rem;
+        margin-right: 1.5625em;
         color: $red;
     }
 
     div.caracteristica2-icono2 {
         color: $red;
-        margin-right: 40px;
-        font-size: 45px;
+        margin-right: 2.5em;
+        font-size: 2.8125rem;
     }
 
     .section3 {
         background-color: #F4F7FC;
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-top: 39px;
-        margin-top: 40px;
-        padding-bottom: 40px;
+        padding-left: .9375em;
+        padding-right: .9375em;
+        padding-top: 2.4375em;
+        margin-top: 2.5em;
+        padding-bottom: 2.5em;
     }
 
     header.header-article-section3 {
-        margin-bottom: 30px;
+        margin-bottom: 1.875em;
     }
 
     article.article-section3 {
-        margin-bottom: 35px;
+        margin-bottom: 2.1875em;
         width: 80%;
     margin-left: auto;
     margin-right: auto;
     }
 
     div.contenedor-slider {
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-top: 15px;
+        padding-left: .9375em;
+        padding-right: .9375em;
+        padding-top: .9375em;
         background-color: white;
-        border-radius: 6px;
+        border-radius: .375rem;
     }
 
     figure.carrusel figcaption h2 {
-        margin: 20px 0px;
+        margin: 1.25em 0px;
     }
 
     figure.carrusel img {
@@ -239,7 +271,7 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     figure.carrusel figcaption {
-        padding: 20px 20px 0px 20px;
+        padding: 1.25em 1.25em 0px 1.25em;
     }
 
 
@@ -255,9 +287,9 @@ $pt_pb: 60px 0px 60px 0px;
 
     .relative a {
         display: block;
-        padding: 16px 20px;
+        padding: 1em 1.25em;
         color: #202020;
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 500;
         text-decoration: none;
     }
@@ -270,7 +302,7 @@ $pt_pb: 60px 0px 60px 0px;
         width: 100px;
         right: -15px;
         top: 0;
-        padding: 0 0 54px 0;
+        padding: 0 0 3.375em 0;
         transform: skew(-29deg);
         transition: 0.3s;
     }
@@ -296,9 +328,9 @@ $pt_pb: 60px 0px 60px 0px;
 
     figure.carrusel figcaption a {
         display: block;
-        padding: 16px 20px;
+        padding: 1em 1.25em;
         color: #202020;
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 500;
         text-decoration: none;
     }
@@ -311,7 +343,7 @@ $pt_pb: 60px 0px 60px 0px;
         width: 100px;
         right: -15px;
         top: 0;
-        padding: 0 0 54px 0;
+        padding: 0 0 3.375em 0;
         transform: skew(-29deg);
         transition: 0.3s;
     }
@@ -342,10 +374,10 @@ $pt_pb: 60px 0px 60px 0px;
 
     div.contenedor-sec4 {
         background-image: url('../img/ch-bg.webp');
-        padding-top: 46px;
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-bottom: 70px;
+        padding-top: 2.875em;
+        padding-left: .9375em;
+        padding-right: .9375em;
+        padding-bottom: 4.375em;
         background-position: bottom;
     }
 
@@ -358,18 +390,18 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     .icono {
-        font-size: 45px;
+        font-size: 2.8125rem;
         color: #f12a02;
     }
 
     .p-font {
         color: #616161;
-        font-size: 17px;
-        margin-bottom: 50px;
+        font-size: 1.0625rem;
+        margin-bottom: 3.125em;
     }
 
     .profesional-team {
-        padding-top: 75px;
+        padding-top: 4.6875em;
     }
 
     figure.profesional1 {
@@ -380,7 +412,7 @@ $pt_pb: 60px 0px 60px 0px;
 
     .profesional1-caption {
         background: #fff;
-        padding: 20px 0;
+        padding: 1.25em 0;
         width: 80%;
         margin: auto;
         border-radius: 5px;
@@ -397,7 +429,7 @@ $pt_pb: 60px 0px 60px 0px;
         top: 40%;
         right: 0px;
         list-style: none;
-        padding: 15px;
+        padding: .9375em;
         background-color: white;
         transition: .3s;
         opacity: 0;
@@ -423,7 +455,7 @@ $pt_pb: 60px 0px 60px 0px;
 
     button.btn-form-sec5 {
         background: #FF3C00;
-        padding: 14px 39px;
+        padding: .875em 2.4375em;
         color: #fff;
     }
 
@@ -433,7 +465,7 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     .section7 {
-        margin-bottom: 30px;
+        margin-bottom: 1.875em;
     }
 
     .section8 {
@@ -491,7 +523,7 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     .card-title {
-        font-size: 20px;
+        font-size: 1.25rem;
     }
 
     div.card-body {
@@ -551,9 +583,9 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     section.section2 {
-        margin-top: 80px;
-        padding-right: 15px;
-        padding-left: 15px;
+        margin-top: 5em;
+        padding-right: .9375em;
+        padding-left: .9375em;
     }
 
 }
@@ -592,7 +624,7 @@ $pt_pb: 60px 0px 60px 0px;
     }
 }
 
-@media screen and (max-width: 575.98px) {
+@media screen and (max-width: 760px) {
     .hero {
         display: none;
     }
@@ -602,7 +634,7 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     .section2 {
-        margin-top: 50px;
+        margin-top: 3.125em;
     }
 
     div.row.slider-md {
@@ -622,10 +654,22 @@ $pt_pb: 60px 0px 60px 0px;
     }
 
     section.section2 {
-        margin-top: 80px;
-        padding-right: 15px;
-        padding-left: 15px;
+        margin-top: 5em;
+        padding-right: .9375em;
+        padding-left: .9375em;
     }
 
     
+}
+
+.imagen-sec4{
+    text-align: center;
+}
+
+.sec4-flex{
+    display: flex;
+}
+
+.form-h3{
+    font-size: 1rem;
 }
